--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "axios": "0.18.0",
     "babel-polyfill": "^6.26.0",
     "blueimp-md5": "^2.10.0",
-    "echarts": "3.8.5",
+    "echarts": "^3.8.5",
     "element-ui": "2.4.7",
     "moment": "2.22.2",
     "stylus": "0.54.5",
