--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "axios": "0.18.0",
     "babel-polyfill": "^6.26.0",
     "blueimp-md5": "^2.10.0",
+    "diff2html": "^2.11.3",
     "echarts": "3.8.5",
     "element-ui": "2.4.7",
+    "highlight.js": "^9.15.10",
     "moment": "2.22.2",
     "stylus": "0.54.5",
     "stylus-loader": "3.0.2",
@@ -24,7 +26,6 @@
     "webpack-dev-server": "^2.11.3"
   },
   "devDependencies": {
-    "jquery": "1.12.4",
     "autoprefixer": "7.1.2",
     "babel-core": "6.22.1",
     "babel-helper-vue-jsx-merge-props": "2.0.3",
@@ -42,6 +43,7 @@
     "file-loader": "1.1.4",
     "friendly-errors-webpack-plugin": "1.6.1",
     "html-webpack-plugin": "2.30.1",
+    "jquery": "1.12.4",
     "node-notifier": "5.1.2",
     "optimize-css-assets-webpack-plugin": "3.2.0",
     "ora": "1.2.0",
