--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-core": "6.22.1",
     "babel-helper-vue-jsx-merge-props": "2.0.3",
     "babel-loader": "7.1.1",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-syntax-jsx": "6.18.0",
     "babel-plugin-transform-runtime": "6.22.0",
     "babel-plugin-transform-vue-jsx": "3.5.0",
@@ -56,7 +57,7 @@
     "shelljs": "0.7.6",
     "uglifyjs-webpack-plugin": "1.1.1",
     "url-loader": "0.5.8",
-    "vue-loader": "13.3.0",
+    "vue-loader": "11.1.4",
     "vue-style-loader": "3.0.1",
     "vue-template-compiler": "2.5.2",
     "webpack": "3.6.0",
