--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "element-ui": "2.4.7",
     "highlight.js": "^9.15.10",
     "moment": "2.22.2",
+    "sortablejs": "^1.10.2",
     "stylus": "0.54.5",
     "stylus-loader": "3.0.2",
     "vue": "2.5.2",
@@ -46,6 +47,7 @@
     "html-webpack-plugin": "2.30.1",
     "jquery": "1.12.4",
     "node-notifier": "5.1.2",
+    "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "3.2.0",
     "ora": "1.2.0",
     "portfinder": "1.0.13",
@@ -53,6 +55,7 @@
     "postcss-loader": "2.0.8",
     "postcss-url": "7.2.1",
     "rimraf": "2.6.0",
+    "sass-loader": "^7.3.1",
     "semver": "5.3.0",
     "shelljs": "0.7.6",
     "uglifyjs-webpack-plugin": "1.1.1",
