--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "echarts": "3.8.5",
     "element-ui": "2.13.2",
     "highlight.js": "^9.15.10",
+    "mime": "^2.5.2",
     "moment": "2.22.2",
     "socket.io-client": "^3.1.0",
     "sortablejs": "^1.10.2",
