--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "highlight.js": "^9.15.10",
     "mime": "^2.5.2",
     "moment": "2.22.2",
-    "socket.io-client": "^3.1.0",
+    "socket.io-client": "2.4.0",
     "sortablejs": "^1.10.2",
     "stylus": "0.54.5",
     "stylus-loader": "3.0.2",
@@ -60,6 +60,8 @@
     "sass-loader": "^7.3.1",
     "semver": "5.3.0",
     "shelljs": "0.7.6",
+    "sockjs-client": "^1.5.1",
+    "stompjs": "^2.3.3",
     "uglifyjs-webpack-plugin": "1.1.1",
     "url-loader": "0.5.8",
     "vue-loader": "11.1.4",
